--- a/src/makefile
+++ b/src/makefile
@@ -1,3 +1,6 @@
+.PHONY: clean
+.PHONY: cpp
+
 APP = kakuro
 
 HC = ghc
@@ -6,14 +9,17 @@ CC = g++
 HTARGETS = main.hs
 CTARGETS = kakuro.cpp
 
+CDEPS = kakuro.hpp test.hpp
+
+cpp: $(CTARGETS) $(CDEPS)
+	$(CC) $(CTARGETS) $(CDEPS) -o $(APP) --debug
+	rm test.hpp
+
 haskell: $(TARGETS)
 	$(HC) $(TARGETS) -o $(APP)
 
-cpp: $(CTARGETS)
-	$(CC) $(CTARGETS) -o $(APP) --debug
-
-
-.PHONY: clean
+test.hpp:
+	cp ../test_cases/$(TEST) test.hpp
 
 clean:
 	@rm -f *.o *.hi $(APP)
