almost half already working

--- a/src/makefile
+++ b/src/makefile
@@ -6,7 +6,7 @@ APP = kakuro
 HC = ghc
 CC = g++
 
-HTARGETS = main.hs
+HTARGETS = kakuro.hs
 CTARGETS = kakuro.cpp
 
 CDEPS = kakuro.hpp test.hpp
@@ -15,8 +15,8 @@ cpp: $(CTARGETS) $(CDEPS)
 	$(CC) $(CTARGETS) $(CDEPS) -o $(APP) --debug
 	@rm test.hpp
 
-haskell: $(TARGETS)
-	$(HC) $(TARGETS) -o $(APP)
+haskell: $(HTARGETS)
+	$(HC) $(HTARGETS) -o $(APP)
 
 test.hpp:
 	@cp ../test_cases/test$(TEST).hpp test.hpp
