Now it ain't that thrashy

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,4 @@
 .PHONY: clean
-.PHONY: cpp
 
 APP = kakuro
 
@@ -9,14 +8,19 @@ CC = g++
 HTARGETS = kakuro.hs
 CTARGETS = kakuro.cpp
 
+HDEPS = test.hs
 CDEPS = kakuro.hpp test.hpp
 
-cpp: $(CTARGETS) $(CDEPS)
-	$(CC) $(CTARGETS) $(CDEPS) -o $(APP) --debug
-	@rm test.hpp
+haskell: $(HTARGETS) $(HDEPS)
+	$(HC) $(HTARGETS) $(HDEPS) -o $(APP)
+	@rm test.hs
 
-haskell: $(HTARGETS)
-	$(HC) $(HTARGETS) -o $(APP)
+test.hs:
+	@cp ../test_cases/test$(TEST).hs test.hs
+
+cpp: $(CTARGETS) $(CDEPS)
+	$(CC) $(CTARGETS) $(CDEPS) -o $(APP)
+	@rm test.hpp
 
 test.hpp:
 	@cp ../test_cases/test$(TEST).hpp test.hpp
