--- a/test_cases/makefile
+++ b/test_cases/makefile
@@ -22,46 +22,14 @@
 # 
 # This program solves kakuro boards using backtracking.
 
-
-.PHONY: clean
-
-CC  = g++
-HC  = ghc
-SCM = guile -s
-
-CPPDEPS = $(wildcard *.hpp)
-HSDEPS  = $(wildcard *.hs)
-SCMDEPS = $(wildcard *.scm)
-
-ZINHO = $(TESTDIR)/zinho
-
-cpp: $(APP).cpp $(CPPDEPS)
-	$(CC) $< -o $(APP)
-	@rm -f test.cpp
-
-haskell: $(HSDEPS)
-	$(HC) $< -o $(APP)
-	@rm -f test.hs
-
-scheme: $(SCMDEPS)
-	$(SCM) $<
-	@rm -f test.scm
-
-# Build test dependencies.
-## integrate makes.
-test.cpp:
-	$(ZINHO) $(TEST)
-	mv $(TESTDIR) test.cpp
-
-test.hs:
-	$(ZINHO) $(TEST)
-	mv $(TESTDIR) test.cpp
-
-test.scm:
-	$(ZINHO) $(TEST)
-	mv $(TESTDIR) test.cpp
+zinho: zinho.l
+	flex $<
+	gcc lex.yy.c -o zinho
 
 clean:
-	@rm -f $(APP)
-	@rm -f *.o
-	@rm -f *.hi
+	@rm -f lex.yy.c
+	@rm -f test
+
+veryclean:
+	@rm -f zinho
+	$(MAKE) clean
